added divs for the different boxes and header with p-tags

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="main_container_body">
+      <div class="heading_container">
+        <header>Vacation Destinations WishList</header>
+        <p>
+          Found exciting places to visit on your next vacation? Use the form
+          below to add them to your wishlist.
+        </p>
+      </div>
+      <div class="left_right_container">
+        <div class="left_container"></div>
+        <div class="right_container"></div>
+      </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
