--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
       </div>
       <div class="left_right_container">
         <div class="left_container"></div>
-        <div class="right_container"></div>
+        <div class="right_container">
+          <div class="right_container_header">
+            <h1>Enter destination details</h1>
+          </div>
+          <div class="right_container_below_header"></div>
+        </div>
       </div>
     </div>
 
