--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <div class="left_container"></div>
         <div class="right_container">
           <div class="right_container_header">
-            <h1>Enter destination details</h1>
+            <div class="right_container_header">
+              <h1>Enter destination details</h1>
+            </div>
           </div>
           <div class="right_container_below_header"></div>
         </div>
