--- a/index.html
+++ b/index.html
@@ -28,7 +28,49 @@
         </p>
       </div>
       <div class="left_right_container">
-        <div class="left_container"></div>
+        <div class="left_container">
+          <div id="form">
+            <form>
+              <div class="mb-3">
+                <label class="form-label">Destination name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter the name of the destination"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Location</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Where is it located?"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Photo</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter an image url of the place?"
+                />
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label">Description</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Where is it located?"
+                />
+              </div>
+
+              <button type="submit" class="btn btn-primary">Add to list</button>
+            </form>
+          </div>
+        </div>
         <div class="right_container">
           <div class="right_container_header">
             <div class="right_container_header">
