--- a/index.html
+++ b/index.html
@@ -59,12 +59,15 @@
               </div>
 
               <div class="mb-3">
-                <label class="form-label">Description</label>
-                <input
-                  type="text"
+                <label for="exampleFormControlTextarea1" class="form-label"
+                  >Description</label
+                >
+                <textarea
                   class="form-control"
+                  id="exampleFormControlTextarea1"
+                  rows="3"
                   placeholder="Where is it located?"
-                />
+                ></textarea>
               </div>
 
               <button type="submit" class="btn btn-primary">Add to list</button>
