changed header to h1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="main_container_body">
       <div class="heading_container">
-        <header>Vacation Destinations WishList</header>
+        <h1>Vacation Destinations WishList</h1>
         <p>
           Found exciting places to visit on your next vacation? Use the form
           below to add them to your wishlist.
