--- a/index.html
+++ b/index.html
@@ -4,31 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Destinations Page</title>
+
     <!-- Reset CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-css-reset/dist/reset.min.css"
     />
-    <!-- Bootstrap Link -->
+
+    <!-- Bootstrap CSS -->
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
     />
-    <!-- Local Stylesheet -->
+
+    <!-- My own styles -->
     <link rel="stylesheet" href="./style.css" />
-    <title>Dream Destination Site</title>
   </head>
   <body>
     <header>
-      <h1>Vacation Destinations WishList</h1>
+      <h1>Vacation Destinations Wishlist</h1>
       <p>
-        Found exciting places to visit on your next vacation? Use the form below
-        to add them to your wishlist.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facilis
+        nesciunt explicabo ullam blanditiis obcaecati cumque voluptates.
+        Repellendus quidem dolore qui voluptatem, consequatur eius, nobis
+        dignissimos maxime vero voluptates commodi.
       </p>
     </header>
 
     <main>
-      <section class="box_container" id="left_box">
+      <section class="box_container bordered" id="left_box">
         <form id="user_input_form">
           <input
             type="text"
@@ -44,7 +51,7 @@
             placeholder="Location"
             required
           />
-          <input type="url" name="" id="photoUrl" placeholder="Photo URL" />
+          <input type="url" name="" id="photo_url" placeholder="Photo url" />
           <textarea
             name=""
             id="description"
@@ -52,21 +59,30 @@
             rows="10"
             placeholder="Description"
           ></textarea>
-          <button>Add to list</button>
+
+          <input type="submit" value="Add to list" />
         </form>
       </section>
-      <section class="box_container" id="right_box">
-        <h4 id="right_box_heading">Enter Destination Details</h4>
-        <div class="bordered" id="cards_container">Card container</div>
+
+      <section class="box_container bordered" id="right_box">
+        <h4 class="bordered" id="right_box_heading">
+          Enter Destination Details
+        </h4>
+
+        <div class="bordered" id="cards_container">Cards container</div>
       </section>
     </main>
 
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
 
-    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+
+    <!-- My own script -->
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
