--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             placeholder="Location"
             required
           />
-          <input type="url" name="" id="photo_url" placeholder="Photo url" />
+          <!-- <input type="url" name="" id="photo_url" placeholder="Photo url" /> -->
           <textarea
             name=""
             id="description"
